# haskell-bytestring-delta

./: BDelta.cabal  BDelta.hs  Tests.hs  bdelta.c  bdelta.cabal  bdelta.h  bytestring-delta.cabal  test.hs
Data/: BDelta.hsc
Data/ByteString/: Delta.hsc
